Cleaned up 404 page and started  donate button

--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -8,7 +8,7 @@
   background-color:  #E5E9F0;
   padding-top: 10px;
   padding-bottom: 10px;
-  width: 100%;
+  width: 100vw;
   bottom: 0;
   position: fixed;
   border-top: 1px solid rgba(0,0,0,0.20);
