--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -35,8 +35,8 @@
         <mat-icon>warning</mat-icon> You seem to not be logged in! What do you want to do?
       </mat-error>
       <form fxLayoutAlign="stretch" fxLayout="column" >
-        <button mat-raised-button class="mt-5" color="primary" (click)="toLogin()">To Login?</button>
-        <button mat-raised-button class="mt-5" color="accent" (click)="toRegister()">To Register?</button>
+        <button mat-raised-button class="mt-5" color="primary" (click)="toLogin()">Already have an account?</button>
+        <button mat-raised-button class="mt-5" color="accent" (click)="toRegister()">Register</button>
       </form>
     </mat-card>
   </div>
