--- a/src/app/components/notfound/notfound.component.scss
+++ b/src/app/components/notfound/notfound.component.scss
@@ -3,21 +3,19 @@
   padding-left: 13px;
   padding-right: 13px;
 }
-
 .pageNotFound {
-  margin-top: -100px;
+  margin: -100px 0px 2em;
+  width: 100vw;
 }
 
 .pageNotFound mat-card {
   padding: 0;
+  width: 75vw;
+  min-width: 280px;
+  max-width: 660px;
 }
 
 .pageNotFound mat-card mat-error {
   margin-top: 10px;
   margin-bottom: 10px;
-}
-
-.pagenotfound-image {
-  width: 500px;
-  height: 278px;
 }
