--- a/src/app/components/sorter/sorter.component.html
+++ b/src/app/components/sorter/sorter.component.html
@@ -1,3 +1,4 @@
+<div class="sortGrid">
 <div class="sorter">
   <button type="button" (click)="toggleSelection(0)" [ngClass]="{'clicked': selection[0]}" class="sortButton">
     Newest<img [src]='selection[0] ? "assets/pictures/newest_icon_white.png" : "assets/pictures/newest_icon.png"' class="sortIcon" alt="sorting">
@@ -5,4 +6,10 @@
   <button type="button" (click)="toggleSelection(1)" [ngClass]="{'clicked': selection[1]}" class="sortButton">
     Top<img [src]='selection[1] ? "assets/pictures/top_icon_white.png" : "assets/pictures/top_icon.png"' class="sortIcon" alt="sorting">
   </button>
+</div>
+<div >
+<a href="https://www.buymeacoffee.com/forumecho">
+  <img src="https://img.buymeacoffee.com/button-api/?text=Make a donation&emoji=🇪🇺&slug=forumecho&button_colour=1e448a&font_colour=ffffff&font_family=Inter&outline_colour=ffffff&coffee_colour=FFDD00" id="donateButton">
+</a>
+</div>
 </div>
