--- a/src/app/components/sorter/sorter.component.scss
+++ b/src/app/components/sorter/sorter.component.scss
@@ -8,25 +8,33 @@
 
 .sorter {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     margin: 0.5em 1%;
 }
+
+.sortGrid {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
 .sortButton {
     margin-bottom: 0.5em;
-    width: 25%;
+    width: 25vw;
     max-width: 200px;
     min-width: 110px;
     display: flex;
     align-items: center;
     font-size: 20px;
     justify-content: center;
-    border-radius:1em;
+    border-radius: 1em;
     color: rgba(30, 68, 138, 1);
     background-color: transparent;
     border: 1px solid rgba(30, 68, 138, 0.87);
     height: 2em;
     cursor: pointer;
 }
+
 .clicked {
     color: white;
     background-color: #1e448a;
@@ -38,4 +46,12 @@
 .sortIcon {
     width: 1em;
     margin-left: 0.5em;
+}
+
+#donateButton {
+    height: 2.5em;
+    margin: 0.5em 0.1em;
+    width: 50vw;
+    max-width: 200px;
+    min-width: 110px;
 }
