--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,8 +1,8 @@
 <div class="content" #connected infinite-scroll [infiniteScrollDistance]="3">
-  <mat-card  class="proposal" *ngFor="let x of response; let i = index">
+  <mat-card class="proposal" *ngFor="let x of response; let i = index">
     <mat-toolbar class="proposal-head" color="primary">
       {{x.title}}
-      <a routerLink="/editpost/{{x._id}}" *ngIf="isAuthor(x.authorId)" id="editLink"><img src="assets/pictures/edit_icon.png" style="width:1.5em; height: 1.5em;"></a>
+      <a routerLink="/editpost/{{x._id}}" *ngIf="isAuthor(x.authorId)" id="editLink"><img src="assets/pictures/edit_icon.png" style="width:1.5em; height: 1.5em;" alt="edit_icon"></a>
     </mat-toolbar>
     <p class="policy">
       {{x.content}}
