--- a/src/app/components/sorter/sorter.component.html
+++ b/src/app/components/sorter/sorter.component.html
@@ -7,9 +7,9 @@
     Top<img [src]='selection[1] ? "assets/pictures/top_icon_white.png" : "assets/pictures/top_icon.png"' class="sortIcon" alt="sorting">
   </button>
 </div>
-<div >
+<!-- <div >
 <a href="https://www.buymeacoffee.com/forumecho" target="_blank">
   <img alt="donation_icon" src="https://img.buymeacoffee.com/button-api/?text=Make a donation&emoji=🇪🇺&slug=forumecho&button_colour=1e448a&font_colour=ffffff&font_family=Inter&outline_colour=ffffff&coffee_colour=FFDD00" id="donateButton">
 </a>
-</div>
+</div> -->
 </div>
