--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,13 +3,15 @@
   display: flex;
   justify-content: center;
   z-index: 15;
+  width: 100vw;
 }
 #EUFlag {
   border: 1px solid #FDCB0B;
   width: 70px;
-  height: 47px;
+  height: 45px;
   position: relative;
-  top: 10%;
+  margin-top: 10%;
+//   top: 8%;
 }
 
 .profileDot {
