Added trademark, started grid

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <a *ngIf="isLoggedIn(); else elseBlock" routerLink="user"><span class="profileDot"><img src="assets/pictures/profile_icon.png" alt="profile_icon"></span></a>
   <ng-template #elseBlock><a routerLink="login"><span class="profileDot"><img src="assets/pictures/profile_icon.png" alt="profile_icon"></span></a></ng-template>
 
-  <div class="title">Forum Echo</div>
+  <!-- <div class="title">Forum Echo</div> -->
 
   <a routerLink="/">
     <img alt="FE-logo" src="assets/pictures/FE-logo.png" id="EUFlag">
