--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="welcoming">
-  <h1 id="welcomeTitle">Welcome to Forum Echo</h1>
+  <h1 id="welcomeTitle">Welcome to Forum Echo&trade;</h1>
 </div>
 <div fxLayoutAlign="center start" class="card-div">
   <mat-card fxFlex="25">
