Grid on home page

--- a/src/app/components/posts/posts.component.scss
+++ b/src/app/components/posts/posts.component.scss
@@ -1,10 +1,12 @@
 .content {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
   padding-bottom: 3em !important;
   border-radius: 4px!important;
+  position: absolute;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, 0);
 }
 
 .proposal {
