--- a/src/app/components/sorter/sorter.component.html
+++ b/src/app/components/sorter/sorter.component.html
@@ -8,7 +8,7 @@
   </button>
 </div>
 <div >
-  <button class="sortButton" id="about">About us</button>
+  <!-- <button class="sortButton" id="about">About us</button> -->
   <!-- <div class="gfm-embed" data-url="https://www.gofundme.com/f/support-forum-echo/widget/medium/"></div><script defer src="https://www.gofundme.com/static/js/embed.js"></script>
 <a href="https://www.buymeacoffee.com/forumecho" target="_blank">
   <img alt="donation_icon" src="https://img.buymeacoffee.com/button-api/?text=Make a donation&emoji=🇪🇺&slug=forumecho&button_colour=1e448a&font_colour=ffffff&font_family=Inter&outline_colour=ffffff&coffee_colour=FFDD00" id="donateButton">
