--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
+<app-header ></app-header>
 <router-outlet></router-outlet>
-<app-info class="info"></app-info>
+<app-info></app-info>
