--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="home-layout">
 <app-sorter (outputSortingOptions)="getChildData($event)" class="sorting"></app-sorter>
+<app-about-button class="about"></app-about-button>
 <app-posts [sortingOptions]="sortOptions" class="main-content"></app-posts>
 </div>
