--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,15 +1,27 @@
+* { box-sizing: border-box;}
 .sorting {
     grid-area: menu;
 }
+
 .about {
     grid-area: about;
 }
+
 .main-content {
     grid-area: main;
 }
+
 .home-layout {
     display: grid;
     grid-template-areas:
-    'menu about about about'
-    'menu main main main';
+        'menu about about about'
+        'menu main main main';  
+}
+
+@media only screen and (max-width: 600px) {
+    .home-layout {
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.1fr 1fr 3fr;
+        grid-template-areas: 'about' 'menu' 'main';
+    }
 }
