--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,5 +15,5 @@ body {
   font-size: 18px !important;
 }
 
-html, body { height: 100%; }
+html, body { height: 100vh; width: 100vw; overflow: overlay;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
