--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,34 @@
-<p>about works!</p>
+<div class="about-text">
+<h1>Forum Echo 🇪🇺</h1>
+
+<h2>Wait … What's that?</h2>
+<p>Echo is a platform where EU citizens can share their ideas to improve the Union. Similar to Reddit, you can also vote on other people's proposals.</p>
+
+<h2>Why though?</h2>
+<ol>
+<li>The EU already does a lot to increase contact with the public. We believe the project can continue the fight against EU indifference.</li>
+<li>Sure, we could also vote on Reddit. However, that platform is not European, it gains close to no attention from legislators, and policy ideas are often annihilated by memes, content from other subreddits, and low attention spans.</li>
+</ol>
+<h2>Technical details 💡</h2>
+<ul>
+    <li>NestJS connected to MongoDB Atlas</li>
+    <li>Front-end: AngularJS</li>
+</ul>
+<h2>Donate</h2>
+<p>We kindly ask you to support our project, either on BuyMeACoffee or GoFundMe. Thanks!</p>
+</div>
+<div class="donate-buttons">
+    <a href="https://www.buymeacoffee.com/forumecho" target="_blank">
+        <img alt="donation_icon"
+            src="https://img.buymeacoffee.com/button-api/?text=Make a donation&emoji=🇪🇺&slug=forumecho&button_colour=1e448a&font_colour=ffffff&font_family=Inter&outline_colour=ffffff&coffee_colour=FFDD00"
+            id="buymeacoffee-button">
+    </a>
+    <a id="GoFundMe-link" href="https://www.gofundme.com/f/support-forum-echo">
+        <button id="GoFundMe-button">
+        <img src="assets/pictures/Gofundme-logo.png" alt="GoFundMe_logo">
+        </button>
+    </a>
+</div>
+<div class="privacy-and-terms">
+    <a routerLink="/privacy" class="statement-link">Our privacy statement</a>🔒<a routerLink="/terms" class="statement-link">Terms and conditions</a>
+</div>
