--- a/src/app/components/about-button/about-button.component.scss
+++ b/src/app/components/about-button/about-button.component.scss
@@ -13,10 +13,11 @@
     background-color: #1E448A;
     border: 0;
     font-size: 20px;
-    padding: 0.5em;
+    padding: 0.6em;
     border-bottom-left-radius: 0.33em;
     border-bottom-right-radius: 0.33em;
     cursor: pointer;
+    // display:none;
 }
 .expand-tab {
     background-color: #1E448A;
