--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,7 @@
 .topBar {
   height: 70px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   z-index: 15;
   width: 100vw;
 }
@@ -10,7 +10,6 @@
   width: 70px;
   position: relative;
   margin-top: 10%;
-//   top: 8%;
 }
 
 .profileDot {
@@ -19,7 +18,6 @@
   color: #FFFFFF;
   width: 50px;
   height: 50px;
-  position: absolute;
   font-weight: 500;
   font-size: 26px;
   display: flex;
@@ -32,14 +30,8 @@
 
 #add {
   color: #FDCB0B;
-  position: absolute;
   font-size: 50px;
   right: 1%;
   top: 10px;
   cursor: pointer;
-}
-
-.title {
-  position: absolute;
-  left: 4.5%;
 }
