--- a/src/app/components/sorter/sorter.component.scss
+++ b/src/app/components/sorter/sorter.component.scss
@@ -41,6 +41,5 @@
 }
 #about {
   border-style: none none solid solid;
-  border-radius: 0;
-  border-bottom-left-radius:1em;
+  border-radius: 0 0 0 1em;
 }
