--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="about-text">
-<h1>Forum Echo 🇪🇺</h1>
+<h1>Forum Echo&trade; 🇪🇺</h1>
 
 <h2>Wait … What's that?</h2>
 <p>Echo is a platform where EU citizens can share their ideas to improve the Union. Similar to Reddit, you can also vote on other people's proposals.</p>
@@ -12,7 +12,7 @@
 <h2>Technical details 💡</h2>
 <ul>
     <li>NestJS connected to MongoDB Atlas</li>
-    <li>Front-end: AngularJS</li>
+    <li>Front-end: Angular</li>
 </ul>
 <h2>Donate</h2>
 <p>We kindly ask you to support our project, either on BuyMeACoffee or GoFundMe. Thanks!</p>
