--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -20,7 +20,7 @@
 
       <button mat-raised-button class="mt-5" color="accent" (click)="logOut()">Logout</button>
 
-      <button mat-raised-button class="mt-5" color="warn" (click)="delUser()">Delete User</button>
+      <button mat-raised-button class="mt-5" color="warn" (click)="openFlagDialog()">Delete User</button>
       <a id="request-data" (click)="openSnackBar()">Request data</a>
     </form>
   </mat-card>
