Improved voting display

--- a/src/app/components/posts/flag-post-dialog.html
+++ b/src/app/components/posts/flag-post-dialog.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Report</h1>
 <div mat-dialog-content>
-  <p>Do you want to report this post by {{username}}</p>
+  <p>Do you want to report this post by {{username}}?</p>
 </div>
 <div mat-dialog-actions>
 <!-- <div> -->
