--- a/src/app/components/user-settings/user-settings.component.scss
+++ b/src/app/components/user-settings/user-settings.component.scss
@@ -25,4 +25,8 @@ button {
 #request-data {
   cursor: pointer;
   color:#696969;
+  text-decoration: underline;
+}
+.form-button {
+  margin: 1.5em 5px;
 }
