--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -22,7 +22,7 @@
         <button mat-raised-button class="mt-5" color="accent" (click)="logOut()">Log out</button>
 
         <button mat-raised-button class="mt-5" color="warn" (click)="delUser()">Delete User</button>
-        <a class="form-button" id="request-data" (click)="openSnackBar()">Request data</a>
+        <!-- <a class="form-button" id="request-data" (click)="openSnackBar()">Request data</a> -->
     </form>
   </mat-card>
 </div>
