Added SlideAnimations to all routes

--- a/src/app/components/editpost/editpost.component.html
+++ b/src/app/components/editpost/editpost.component.html
@@ -1,4 +1,4 @@
-<div fxLayoutAlign="center center" fxFlexFill class="main-div">
+<div fxLayoutAlign="center center" fxFlexFill class="content">
   <mat-card fxFlex="25">
     <mat-toolbar color="primary">Edit Post</mat-toolbar>
     <form *ngIf="formGroup" fxLayoutAlign="stretch" fxLayout="column" class="post-form" [formGroup]="formGroup" (ngSubmit)="editPost()">
