--- a/src/app/components/editpost/editpost.component.scss
+++ b/src/app/components/editpost/editpost.component.scss
@@ -1,8 +1,4 @@
-.main-div {
-  margin-top: -70px;
-}
-
-.main-div mat-card {
+.content mat-card {
   min-height: 550px;
   padding: 0;
   max-width: 500px !important;
