--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isLoggedIn(); else elseBlock" fxLayoutAlign="center center" fxFlexFill class="main-div">
+<div *ngIf="isLoggedIn(); else elseBlock" fxLayoutAlign="center center" fxFlexFill class="content">
   <mat-card fxFlex="25">
     <mat-toolbar color="primary">User Settings for {{username}}</mat-toolbar>
     <form fxLayoutAlign="stretch" fxLayout="column" class="login-form" [formGroup]="formGroup" (ngSubmit)="editUser()">
@@ -16,7 +16,7 @@
       <label id="showP">
         <mat-checkbox name="showP" (click)="togglePass()">Show Password</mat-checkbox>
       </label>
-      
+
         <button mat-raised-button type="submit" class="form-button mt-5" color="primary">Save</button>
 
         <button mat-raised-button class="mt-5" color="accent" (click)="logOut()">Log out</button>
