--- a/src/app/components/newpost/newpost.component.html
+++ b/src/app/components/newpost/newpost.component.html
@@ -1,4 +1,4 @@
-<div fxLayoutAlign="center center" fxFlexFill class="main-div">
+<div fxLayoutAlign="center center" fxFlexFill class="content">
   <mat-card fxFlex="25">
     <mat-toolbar color="primary">New post</mat-toolbar>
     <form fxLayoutAlign="stretch" fxLayout="column" class="login-form" [formGroup]="formGroup" (ngSubmit)="newPost()">
