--- a/src/app/components/newpost/newpost.component.scss
+++ b/src/app/components/newpost/newpost.component.scss
@@ -1,8 +1,4 @@
-.main-div {
-  margin-top: -70px;
-}
-
-.main-div mat-card {
+.content mat-card {
   padding: 0;
   max-width: 500px !important;
   margin: 5px;
