--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,4 +1,4 @@
-<div class="content" #connected infinite-scroll [infiniteScrollDistance]="3">
+<div class="content-posts" #connected infinite-scroll [infiniteScrollDistance]="3">
   <mat-card class="proposal" *ngFor="let x of response; let i = index">
     <mat-toolbar class="proposal-head" color="primary">
       {{x.title}}
