--- a/src/app/components/user-settings/user-settings.component.scss
+++ b/src/app/components/user-settings/user-settings.component.scss
@@ -1,13 +1,11 @@
-.main-div {
-  margin-top: -70px;
-
+.content {
+  margin-top: 5%;
 }
 
-.main-div mat-card, .notLoggedIn mat-card {
+.content mat-card, .notLoggedIn mat-card {
   padding: 0;
   max-width: 500px !important;
   margin: 5px;
-
 }
 
 .login-form {
