--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,7 @@ body {
 
 html, body { height: 100vh; width: 100vw; overflow: overlay;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.content {
+  margin-top: 5%;
+}
