Added error catching for login.component.ts

--- a/src/app/components/notfound/notfound.component.html
+++ b/src/app/components/notfound/notfound.component.html
@@ -1,4 +1,4 @@
-<div fxLayoutAlign="center center" fxFlexFill class="pageNotFound">
+<div fxLayoutAlign="center center" fxFlexFill class="content">
   <mat-card>
     <mat-toolbar color="primary">Error 404 PageNotFound</mat-toolbar>
     <form fxLayout="column" fxLayoutAlign="stretch" class="pageNotFound-form">
