--- a/src/app/components/notfound/notfound.component.scss
+++ b/src/app/components/notfound/notfound.component.scss
@@ -3,19 +3,18 @@
   padding-left: 13px;
   padding-right: 13px;
 }
-.pageNotFound {
-  margin: -100px 0px 2em;
+.content {
   width: 100vw;
 }
 
-.pageNotFound mat-card {
+.content mat-card {
   padding: 0;
   width: 75vw;
   min-width: 280px;
   max-width: 660px;
 }
 
-.pageNotFound mat-card mat-error {
+.content mat-card mat-error {
   margin-top: 10px;
   margin-bottom: 10px;
 }
