--- a/src/app/components/verify/verify.component.html
+++ b/src/app/components/verify/verify.component.html
@@ -4,6 +4,7 @@
 
 <ng-template #Error>
   <div fxLayoutAlign="center start" class="content">
-    An error occurred! message: <p class="message">{{error}}</p>
+      An error occurred! message: <p class="message">{{error}}</p>
   </div>
+  <p fxLayoutAlign="center center"><a routerLink="/login" class="anchor">Sign In</a></p>
 </ng-template>
