--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,7 +16,10 @@
         <mat-checkbox name="showP" (click)="togglePass()">Show Password</mat-checkbox>
       </label>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Login</button>
-      <a routerLink="/register" class="anchor">Sign Up</a>
+      <div class="links">
+        <a routerLink="/register" class="anchor">Sign Up</a>
+        <a routerLink="/forgot" class="anchor forget">Forgot Password</a>
+      </div>
     </form>
   </mat-card>
 </div>
