--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,21 @@
 <mat-toolbar class="topBar" color="primary">
-  <a *ngIf="isLoggedIn(); else elseBlock" routerLink="user"><span class="profileDot"><img src="assets/pictures/profile_icon.png" alt="profile_icon"></span></a>
-  <ng-template #elseBlock><a routerLink="login"><span class="profileDot"><img src="assets/pictures/profile_icon.png" alt="profile_icon"></span></a></ng-template>
+  <a *ngIf="isLoggedIn(); else elseBlock" routerLink="user">
+    <span class="profileDot">
+      <img src="assets/pictures/profile_icon.png" alt="profile_icon">
+    </span>
+  </a>
+  <ng-template #elseBlock>
+    <a routerLink="login">
+      <span class="profileDot">
+        <img src="assets/pictures/profile_icon.png" alt="profile_icon">
+      </span>
+    </a>
+  </ng-template>
   <a routerLink="/">
     <img alt="FE-logo" src="assets/pictures/FE-logo.png" id="EUFlag">
   </a>
-  <a routerLink="newpost"><img alt="newpost" id="add" src="assets/pictures/add_icon.png" *ngIf="showAdd()"/></a>
+  <a routerLink="newpost">
+    <img alt="newpost" id="add" src="assets/pictures/add_icon.png" *ngIf="showAdd()">
+  </a>
 
 </mat-toolbar>
