Updated about page; improved header icon quality

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="about-text">
-<h1>Forum Echo&trade; 🇪🇺</h1>
+<h1>Forum Echo&trade;</h1>
 
 <h2>Wait … What's that?</h2>
 <p>Echo is a platform where EU citizens can share their ideas to improve the Union. Similar to Reddit, you can also vote on other people's proposals.</p>
@@ -18,14 +18,14 @@
 <p>We kindly ask you to support our project, either on BuyMeACoffee or GoFundMe. Thanks!</p>
 </div>
 <div class="donate-buttons">
-    <a href="https://www.buymeacoffee.com/forumecho" target="_blank">
-        <img alt="donation_icon"
-            src="https://img.buymeacoffee.com/button-api/?text=Make a donation&emoji=🇪🇺&slug=forumecho&button_colour=1e448a&font_colour=ffffff&font_family=Inter&outline_colour=ffffff&coffee_colour=FFDD00"
-            id="buymeacoffee-button">
+    <a id="FundMe-link" href="https://www.buymeacoffee.com/forumecho">
+        <button id="FundMe-button">
+        <strong>Buy us a coffee! ☕</strong>
+        </button>
     </a>
-    <a id="GoFundMe-link" href="https://www.gofundme.com/f/support-forum-echo">
-        <button id="GoFundMe-button">
-        <img src="assets/pictures/Gofundme-logo.png" alt="GoFundMe_logo">
+    <a id="FundMe-link" href="https://www.gofundme.com/f/support-forum-echo">
+        <button id="FundMe-button">
+        <img src="assets/pictures/Gofundme-logo.png" alt="GoFundMe_logo" style="height: 2em;">
         </button>
     </a>
 </div>
