Styled info-bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <div [@routeAnimations]="getRouteAnimationData()">
-  <router-outlet></router-outlet>
+  <router-outlet class="main-content"></router-outlet>
 </div>
-<app-info></app-info>
+<app-info class="info"></app-info>
