Added appearance tab in settings

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="topBar" color="primary">
-  <a *ngIf="isLoggedIn(); else elseBlock" routerLink="user">
+  <a *ngIf="isLoggedIn(); else elseBlock" routerLink="settings">
     <span class="profileDot">
       <img id="profileIcon" src="assets/pictures/settings.png" alt="profile_icon">
     </span>
