--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -4,4 +4,5 @@
 
 <app-user-settings></app-user-settings>
 <app-profile></app-profile>
+<app-appearance></app-appearance>
 <app-danger-zone></app-danger-zone>
