--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isLoggedIn(); else elseBlock" fxLayoutAlign="center center" fxFlexFill class="content">
   <mat-card fxFlex="25">
-    <mat-toolbar color="primary">User Settings for {{username}}</mat-toolbar>
+    <mat-toolbar color="primary">Account Settings</mat-toolbar>
     <form fxLayoutAlign="stretch" fxLayout="column" class="login-form"
           [formGroup]="formGroup" (ngSubmit)="editUser()"
     >
