--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,8 +1,8 @@
 <div class="logout-div">
-    <button mat-raised-button class="mt-5" color="accent" (click)="logOut()">Log out</button>
+  <button mat-raised-button class="mt-5" color="accent" (click)="logOut()">Log out</button>
 </div>
 
-<app-user-settings></app-user-settings>
+<app-account></app-account>
 <app-profile></app-profile>
 <app-appearance></app-appearance>
 <app-danger-zone></app-danger-zone>
