--- a/src/app/components/settings/profile/profile.component.html
+++ b/src/app/components/settings/profile/profile.component.html
@@ -12,5 +12,19 @@
 
       <button mat-raised-button type="submit" class="mt-5" color="primary">Save</button>
     </form>
+    <form fxLayoutAlign="stretch" fxLayout="column" class="login-form">
+      <input type="file" class="file-input"
+             (change)="onFileSelected($event)" #fileUpload>
+
+      <div class="file-upload">
+
+        {{fileName || "No file uploaded yet."}}
+
+        <button mat-mini-fab color="primary" class="upload-btn"
+                (click)="fileUpload.click()">
+          <mat-icon>attach_file</mat-icon>
+        </button>
+      </div>
+    </form>
   </mat-card>
 </div>
